--- a/application/admin/view/admin/list.html
+++ b/application/admin/view/admin/list.html
@@ -51,9 +51,13 @@
                                     </td>
                                 </tr>
                                 {/volist}
-
                             </tbody>
                         </table>
+                    </div>
+                    <div class="form-group">
+                        <a href="{:url( 'admin/Admin/add')}"><button type="button" class="btn btn-info">
+                            添加用户
+                        </button></a>
                     </div>
                 </div>
             </div>
