--- a/application/admin/view/admin/add.html
+++ b/application/admin/view/admin/add.html
@@ -5,52 +5,47 @@
 {/block}
 {block name="page-main"}
 <!-- Page Body -->
-<div class="page-body">
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="widget radius-bordered">
-                <div class="widget-header bordered-bottom bordered-themeprimary">
-                    <i class="fa fa-arrow-left widget-icon" onClick="window.location.href='{:url(\'admin/Admin/list\')}';"/></i>
-                    <span class="widget-caption">添加用户</span>
-                </div>
-                <div class="widget-body">
-                    <form class="form-horizontal">
-                        <div class="form-group">
-                            <label for="username" class="col-sm-2 control-label no-padding-right">用户名</label>
-                            <div class="col-sm-6">
-                                <input type="text" class="form-control" id="username" name="username"
-                                    placeholder="用户名" />
-                            </div>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="widget radius-bordered">
+            <div class="widget-header bordered-bottom bordered-themeprimary">
+                <i class="fa fa-arrow-left widget-icon"
+                    onClick="window.location.href='{:url(\'admin/Admin/list\')}';" /></i>
+                <span class="widget-caption">添加用户</span>
+            </div>
+            <div class="widget-body">
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <label for="username" class="col-sm-2 control-label no-padding-right">用户名</label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" id="username" name="username" placeholder="用户名" />
                         </div>
-                        <div class="form-group">
-                            <label for="sort" class="col-sm-2 control-label no-padding-right">邮箱</label>
-                            <div class="col-sm-6">
-                                <input type="email" class="form-control" id="email" name="email" placeholder="邮箱" />
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="sort" class="col-sm-2 control-label no-padding-right">邮箱</label>
+                        <div class="col-sm-6">
+                            <input type="email" class="form-control" id="email" name="email" placeholder="邮箱" />
                         </div>
-                        <div class="form-group">
-                            <label for="password" class="col-sm-2 control-label no-padding-right">用户密码</label>
-                            <div class="col-sm-6">
-                                <input type="text" class="form-control" id="password" name="password"
-                                    placeholder="用户密码" />
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="password" class="col-sm-2 control-label no-padding-right">用户密码</label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" id="password" name="password" placeholder="用户密码" />
                         </div>
-                        <div class="form-group">
-                            <label for="conpass" class="col-sm-2 control-label no-padding-right">确认密码</label>
-                            <div class="col-sm-6">
-                                <input type="text" class="form-control" id="conpass" name="conpass"
-                                    placeholder="确认密码" />
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="conpass" class="col-sm-2 control-label no-padding-right">确认密码</label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" id="conpass" name="conpass" placeholder="确认密码" />
                         </div>
+                    </div>
 
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-primary" name="adminAdd"
-                                    id="adminAdd">添加用户</button>
-                            </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-primary" name="adminAdd" id="adminAdd">添加用户</button>
                         </div>
-                    </form>
-                </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
