--- a/application/admin/view/admin/edit.html
+++ b/application/admin/view/admin/edit.html
@@ -5,53 +5,51 @@
 {/block}
 {block name="page-main"}
 <!-- Page Body -->
-<div class="page-body">
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="widget radius-bordered">
-                <div class="widget-header bordered-bottom bordered-themeprimary">
-                     <i class="fa fa-arrow-left widget-icon" onClick="window.location.href='{:url(\'admin/Admin/list\')}';"/></i>
-                    <span class="widget-caption">用户修改</span>
-                </div>
-                <div class="widget-body">
-                    <form class="form-horizontal">
-                        <div class="form-group">
-                            <input type="hidden" id="id" name="id" value="{$adminInfo.id}" />
-                            <label for="username" class="col-sm-2 control-label no-padding-right">用户账号</label>
-                            <div class="col-sm-6">
-                                <input type="text" class="form-control" id="username" name="username" placeholder="用户账号"
-                                    value="{$adminInfo.username}" />
-                            </div>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="widget radius-bordered">
+            <div class="widget-header bordered-bottom bordered-themeprimary">
+                <i class="fa fa-arrow-left widget-icon"
+                    onClick="window.location.href='{:url(\'admin/Admin/list\')}';" /></i>
+                <span class="widget-caption">用户修改</span>
+            </div>
+            <div class="widget-body">
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <input type="hidden" id="id" name="id" value="{$adminInfo.id}" />
+                        <label for="username" class="col-sm-2 control-label no-padding-right">用户账号</label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" id="username" name="username" placeholder="用户账号"
+                                value="{$adminInfo.username}" />
                         </div>
-                        <div class="form-group">
-                            <label for="email" class="col-sm-2 control-label no-padding-right">邮箱</label>
-                            <div class="col-sm-6">
-                                <input type="email" class="form-control" id="email" name="email" placeholder="邮箱"
-                                    value="{$adminInfo.email}" />
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="col-sm-2 control-label no-padding-right">邮箱</label>
+                        <div class="col-sm-6">
+                            <input type="email" class="form-control" id="email" name="email" placeholder="邮箱"
+                                value="{$adminInfo.email}" />
                         </div>
-                        <div class="form-group">
-                            <label for="create_time" class="col-sm-2 control-label no-padding-right">注册时间</label>
-                            <div class="col-sm-6">
-                                <input type="text" disabled="disabled" class="form-control" id="create_time"
-                                    name="create_time" value="{$adminInfo.create_time}" />
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="create_time" class="col-sm-2 control-label no-padding-right">注册时间</label>
+                        <div class="col-sm-6">
+                            <input type="text" disabled="disabled" class="form-control" id="create_time"
+                                name="create_time" value="{$adminInfo.create_time}" />
                         </div>
-                        <div class="form-group">
-                            <label for="password" class="col-sm-2 control-label no-padding-right">用户密码</label>
-                            <div class="col-sm-6">
-                                <input type="text" class="form-control" id="password" name="password" placeholder="用户密码"
-                                    value="{$adminInfo.password}" />
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="password" class="col-sm-2 control-label no-padding-right">用户密码</label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" id="password" name="password" placeholder="用户密码"
+                                value="{$adminInfo.password}" />
                         </div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-primary" name="adminEdit"
-                                    id="adminEdit">保存修改</button>
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-primary" name="adminEdit" id="adminEdit">保存修改</button>
                         </div>
-                    </form>
-                </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
