--- a/application/admin/view/import/create_template_second.html
+++ b/application/admin/view/import/create_template_second.html
@@ -3,6 +3,8 @@
 {block name="title"}完善模板信息{/block}
 {block name="page-style"}
 <link href="__CSS__/main.css" rel="stylesheet">
+
+<link href="__CSS__/project.css" rel="stylesheet">
 <style>
     .form-inline {
         margin-top: 10px;
