--- a/application/admin/view/import/create_template_first.html
+++ b/application/admin/view/import/create_template_first.html
@@ -7,6 +7,7 @@
 {/block}
 {block name="page-style"}
 <link href="__CSS__/main.css" rel="stylesheet">
+<link href="__CSS__/project.css" rel="stylesheet">
 {/block}
 {block name="page-main"}
 <div class="project-team-container">
