--- a/application/admin/view/import/create_template_third.html
+++ b/application/admin/view/import/create_template_third.html
@@ -4,6 +4,8 @@
 
 {block name="page-style"}
 <link href="__CSS__/main.css" rel="stylesheet">
+
+<link href="__CSS__/project.css" rel="stylesheet">
 {/block}
 {block name="page-main"}
 <div class="project-team-container">
