--- a/application/admin/view/home/index.html
+++ b/application/admin/view/home/index.html
@@ -2,30 +2,7 @@
 
 {block name="page-style"}
 <style>
-    .fun_grid {
-        opacity: 0.8;
-        color: black;
-        width: 80px;
-        height: 80px;
-        margin: 10px;
-        line-height: 80px;
-        text-align: center;
-        background: #2dc3e8 !important;
-        border: 2px cornflowerblue;
-        box-shadow: darkgrey 10px 10px 30px 5px;
-        border-radius: 5px;
-        padding: 2px;
-        font-size: 16px;
-    }
-
-    .fun_grid:hover {
-        transform: all;
-        -webkit-transform: scale(1.2);
-        -moz-transform: scale(1.2);
-        -ms-transform: scale(1.2);
-        -o-transform: scale(1.2);
-
-    }
+    
 </style>
 {/block}
 {block name="page-main"}
@@ -55,7 +32,7 @@
                         <span>添加任务</span>
                     </div>
                 </a>
-                <a href="{:url('admin/Templates/list')}">
+                <a href="{:url('admin/MyData/index')}">
                     <div class="col-xs-1 fun_grid">
                         <span>我的数据</span>
                     </div>
