--- a/application/admin/view/import/create_template_first.html
+++ b/application/admin/view/import/create_template_first.html
@@ -33,7 +33,7 @@
                 <div class="project-first-step">
                     <form id="uploadForm" enctype="multipart/form-data">
                         <div class="form-inline">
-                            <label for="tname" class="col-sm-2 control-label">模板名字</label>
+                            <label for="tname" class="col-lg-2 control-label">模板名字</label>
                             <input type="text" class="form-control" id="tname">
                             <input type="text" class="form-control" name="fileBrowserInput" id="fileBrowserInput"
                                 readonly="readonly">
