--- a/application/admin/view/public/admin_base.html
+++ b/application/admin/view/public/admin_base.html
@@ -12,7 +12,9 @@
     <link id="beyond-link" href="__CSS__/beyond.min.css" rel="stylesheet" type="text/css" />
     <link href="__CSS__/main.css" rel="stylesheet" type="text/css" />
     {block name="page-style"}
-
+    <style>
+    
+</style>
     {/block}
 </head>
 
