--- a/application/admin/view/admin/add.html
+++ b/application/admin/view/admin/add.html
@@ -16,32 +16,32 @@
             <div class="widget-body">
                 <form class="form-horizontal">
                     <div class="form-group">
-                        <label for="username" class="col-sm-2 control-label no-padding-right">用户名</label>
-                        <div class="col-sm-6">
+                        <label for="username" class="col-lg-2 control-label no-padding-right">用户名</label>
+                        <div class="col-lg-6">
                             <input type="text" class="form-control" id="username" name="username" placeholder="用户名" />
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="sort" class="col-sm-2 control-label no-padding-right">邮箱</label>
-                        <div class="col-sm-6">
+                        <label for="sort" class="col-lg-2 control-label no-padding-right">邮箱</label>
+                        <div class="col-lg-6">
                             <input type="email" class="form-control" id="email" name="email" placeholder="邮箱" />
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="password" class="col-sm-2 control-label no-padding-right">用户密码</label>
-                        <div class="col-sm-6">
+                        <label for="password" class="col-lg-2 control-label no-padding-right">用户密码</label>
+                        <div class="col-lg-6">
                             <input type="text" class="form-control" id="password" name="password" placeholder="用户密码" />
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="conpass" class="col-sm-2 control-label no-padding-right">确认密码</label>
-                        <div class="col-sm-6">
+                        <label for="conpass" class="col-lg-2 control-label no-padding-right">确认密码</label>
+                        <div class="col-lg-6">
                             <input type="text" class="form-control" id="conpass" name="conpass" placeholder="确认密码" />
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
+                        <div class="col-lg-offset-2 col-lg-10">
                             <button type="submit" class="btn btn-primary" name="adminAdd" id="adminAdd">添加用户</button>
                         </div>
                     </div>
