--- a/application/admin/view/admin/edit.html
+++ b/application/admin/view/admin/edit.html
@@ -17,35 +17,35 @@
                 <form class="form-horizontal">
                     <div class="form-group">
                         <input type="hidden" id="id" name="id" value="{$adminInfo.id}" />
-                        <label for="username" class="col-sm-2 control-label no-padding-right">用户账号</label>
-                        <div class="col-sm-6">
+                        <label for="username" class="col-lg-2 control-label no-padding-right">用户账号</label>
+                        <div class="col-lg-6">
                             <input type="text" class="form-control" id="username" name="username" placeholder="用户账号"
                                 value="{$adminInfo.username}" />
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="email" class="col-sm-2 control-label no-padding-right">邮箱</label>
-                        <div class="col-sm-6">
+                        <label for="email" class="col-lg-2 control-label no-padding-right">邮箱</label>
+                        <div class="col-lg-6">
                             <input type="email" class="form-control" id="email" name="email" placeholder="邮箱"
                                 value="{$adminInfo.email}" />
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="create_time" class="col-sm-2 control-label no-padding-right">注册时间</label>
-                        <div class="col-sm-6">
+                        <label for="create_time" class="col-lg-2 control-label no-padding-right">注册时间</label>
+                        <div class="col-lg-6">
                             <input type="text" disabled="disabled" class="form-control" id="create_time"
                                 name="create_time" value="{$adminInfo.create_time}" />
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="password" class="col-sm-2 control-label no-padding-right">用户密码</label>
-                        <div class="col-sm-6">
+                        <label for="password" class="col-lg-2 control-label no-padding-right">用户密码</label>
+                        <div class="col-lg-6">
                             <input type="text" class="form-control" id="password" name="password" placeholder="用户密码"
                                 value="{$adminInfo.password}" />
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
+                        <div class="col-lg-offset-2 col-lg-10">
                             <button type="submit" class="btn btn-primary" name="adminEdit" id="adminEdit">保存修改</button>
                         </div>
                     </div>
