--- a/application/admin/view/member/add.html
+++ b/application/admin/view/member/add.html
@@ -34,28 +34,28 @@
                             <div class="widget-body">
                                 <form class="form-horizontal">
                                     <div class="form-group">
-                                        <label for="username" class="col-sm-2 control-label no-padding-right">用户名</label>
-                                        <div class="col-sm-6">
+                                        <label for="username" class="col-lg-2 control-label no-padding-right">用户名</label>
+                                        <div class="col-lg-6">
                                             <input type="text" class="form-control" id="username" name="username" placeholder="用户名" />
                                             <p class="help-block">请输入会员用户名</p>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="email" class="col-sm-2 control-label no-padding-right">邮箱</label>
-                                        <div class="col-sm-6">
+                                        <label for="email" class="col-lg-2 control-label no-padding-right">邮箱</label>
+                                        <div class="col-lg-6">
                                             <input type="email" class="form-control" id="email" name="email" placeholder="邮箱" />
                                             <p class="help-block">请输入会员邮箱</p>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="password" class="col-sm-2 control-label no-padding-right">密码</label>
-                                        <div class="col-sm-6">
+                                        <label for="password" class="col-lg-2 control-label no-padding-right">密码</label>
+                                        <div class="col-lg-6">
                                             <input type="text" class="form-control" id="password" name="password" placeholder="密码" />
                                             <p class="help-block">请输入密码</p>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <div class="col-sm-offset-2 col-sm-10">
+                                        <div class="col-lg-offset-2 col-lg-10">
                                             <button type="submit" class="btn btn-primary" name="cataAdd" id="memberAdd">添加</button>
                                         </div>
                                     </div>
