--- a/application/admin/view/member/edit.html
+++ b/application/admin/view/member/edit.html
@@ -4,27 +4,27 @@
 
     <form class="form-horizontal">
         <input type="hidden" id="id" name="id" value="{$memberInfo.id}" />
-        <div class="form-group row-sm-3">
-            <label for="username" class="col-sm-2 control-label no-padding-right">用户名</label>
-            <div class="col-sm-6">
+        <div class="form-group row-lg-3">
+            <label for="username" class="col-lg-2 control-label no-padding-right">用户名</label>
+            <div class="col-lg-6">
                 <input type="text" class="form-control" id="username" name="username" placeholder="用户名" value="{$memberInfo.username}" />
             </div>
         </div>
         <div class="form-group">
-            <label for="email" class="col-sm-2 control-label no-padding-right">邮箱</label>
-            <div class="col-sm-6">
+            <label for="email" class="col-lg-2 control-label no-padding-right">邮箱</label>
+            <div class="col-lg-6">
                 <input type="text" class="form-control" id="email" name="email" placeholder="邮箱" value="{$memberInfo.email}" disabled="true" />
             </div>
         </div>
         <div class="form-group">
-            <label for="password" class="col-sm-2 control-label no-padding-right">密码</label>
-            <div class="col-sm-6">
+            <label for="password" class="col-lg-2 control-label no-padding-right">密码</label>
+            <div class="col-lg-6">
                 <input type="text" class="form-control" id="password" name="password" placeholder="密码" value="{$memberInfo.password}" />
             </div>
         </div>
         <div class="form-group">
-            <label for="status" class="col-sm-2 control-label no-padding-right">是否禁用</label>
-            <div class="col-sm-6 ">
+            <label for="status" class="col-lg-2 control-label no-padding-right">是否禁用</label>
+            <div class="col-lg-6 ">
                 <input type="checkbox" id="status" name="status" {if $memberInfo.status==0}checked{/if} value="0" />
             </div>
         </div>
