--- a/application/admin/view/template/index.html
+++ b/application/admin/view/template/index.html
@@ -23,20 +23,19 @@
                 <i class="fa fa-arrow-left widget-icon"
                     onClick="window.location.href='{:url(\'admin/Templates/list\')}';" /></i>
                 <span class="widget-caption">{$template.tname}</span>
-
             </div>
             <div class="widget-body">
                 <!-- <form id="formSearch" class="form-horizontal">
                     <div class="form-group" style="margin-top:15px">
-                        <label class="control-label col-sm-1" for="txt_search_departmentname">部门名称</label>
-                        <div class="col-sm-3">
+                        <label class="control-label col-lg-1" for="txt_search_departmentname">部门名称</label>
+                        <div class="col-lg-3">
                             <input type="text" class="form-control" id="txt_search_departmentname">
                         </div>
-                        <label class="control-label col-sm-1" for="txt_search_statu">状态</label>
-                        <div class="col-sm-3">
+                        <label class="control-label col-lg-1" for="txt_search_statu">状态</label>
+                        <div class="col-lg-3">
                             <input type="text" class="form-control" id="txt_search_statu">
                         </div>
-                        <div class="col-sm-4" style="text-align:left;">
+                        <div class="col-lg-4" style="text-align:left;">
                             <button type="button" style="margin-left:50px" id="btn_query"
                                 class="btn btn-primary">查询</button>
                         </div>
