--- a/application/admin/view/import/create_template_second.html
+++ b/application/admin/view/import/create_template_second.html
@@ -1,6 +1,6 @@
 {extend name="public/admin_base"}
 
-{block name="title"}完善模板信息{/block}
+{block name="title"}完善表单信息{/block}
 {block name="page-style"}
 <link href="__CSS__/main.css" rel="stylesheet">
 
@@ -174,7 +174,7 @@
                         </div>
                     </form>
                     <button class="btn btn-success initTemplate" type="button"><span class="fa fa-table"></span>
-                        初始化模板</button>
+                        初始化表单</button>
                 </div>
             </div>
         </div>
