--- a/application/admin/view/import/create_template_third.html
+++ b/application/admin/view/import/create_template_third.html
@@ -1,6 +1,6 @@
 {extend name="public/admin_base"}
 
-{block name="title"}完善模板信息{/block}
+{block name="title"}完善表单信息{/block}
 
 {block name="page-style"}
 <link href="__CSS__/main.css" rel="stylesheet">
