--- a/application/admin/view/my_data/read.html
+++ b/application/admin/view/my_data/read.html
@@ -17,7 +17,7 @@
             <div class="widget-body">
                 <div class="table-responsive">
                    <table class="table table-bordered">
-                    {volist name="dataInfo.getOption" id="vo"}
+                    {volist name="dataInfo.options" id="vo"}
                     <tr>
                         <td>{$vo.content}</td>
                     </tr>
