--- a/application/admin/view/public/_left.html
+++ b/application/admin/view/public/_left.html
@@ -10,13 +10,13 @@
         <li>
             <a href="{:url('admin/Templates/list')}">
                 <i class="menu-icon fa fa-list-alt"></i>
-                <span class="menu-text">任务列表</span>
+                <span class="menu-text">表单列表</span>
             </a>
         </li>
         <li>
             <a href="{:url('admin/Templates/add')}">
                 <i class="menu-icon fa fa-plus"></i>
-                <span class="menu-text">添加任务</span>
+                <span class="menu-text">添加表单</span>
             </a>
         </li>
         <li>
