--- a/application/admin/view/admin/list.html
+++ b/application/admin/view/admin/list.html
@@ -54,7 +54,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="form-group">
+                <div class="form-group text-align-right" style="margin-top: 20px;">
                     <a href="{:url( 'admin/Admin/add')}"><button type="button" class="btn btn-info">
                             添加用户
                         </button></a>
