--- a/application/admin/view/templates/add.html
+++ b/application/admin/view/templates/add.html
@@ -1,7 +1,7 @@
 {extend name="public/admin_base"}
-{block name="title"}创建任务{/block}
+{block name="title"}创建表单{/block}
 {block name="page-breadcrumb"}
-<li class="active">创建任务</li>
+<li class="active">创建表单</li>
 {/block}
 {block name="page-main"}
 
@@ -18,7 +18,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <a href="{:url('admin/Import/createTemplateFirst')}" style="margin-right: 10px;">
-                                    <button class="btn btn-primary btn-lg">已有模板，直接导入</button>
+                                    <button class="btn btn-primary btn-lg">文件导入</button>
                                 </a>
                                 <a href="{:url('admin/Hand/index')}">
                                     <button class="btn btn-primary btn-lg">手动创建</button>
