--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -5,6 +5,9 @@
   .widget-header {
     display: none;
   }
+  .form-control{
+    margin-top: 20px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -45,12 +48,13 @@
   word-break: break-all;
 }
 .fun_grid>span {
-    width: 64px;
-    height: 64px;
-    display：block;
-    text-align: justify;
-    text-align-last: justify;
-  }
+  width: 64px;
+  height: 64px;
+  display: block;
+  text-align: justify;
+  text-align-last: justify;
+}
+  
 
 a {
   text-decoration: none !important;
